--- a/src/app/core/apartement/apartement.component.html
+++ b/src/app/core/apartement/apartement.component.html
@@ -1,1 +1,28 @@
-<p>apartement works!</p>
+
+    <table class="table" border="2">
+        <tr>
+            <th>ID</th>
+            <th>appartNum</th>
+            <th>floorNum</th>
+            <th>surface</th>
+            <th>terrace</th>
+        </tr>
+        <tr *ngFor="let A of listApartments">
+            <td>{{A.id}}</td>
+            <td>{{A.appartNum}}</td>
+            <td>{{A.floorNum}}</td>
+            <td>{{A.surface}}</td>
+            <td>{{A.terrace}}</td>
+            <td><button class="btn btn-info" (click)="likeAppart(A)">Like</button></td>
+
+        </tr>
+    </table>
+    <div>
+        <button (click)="ShowFav()">Show Favoirite</button>
+        <p *ngIf="Tmptest" >{{ListFavAp}}</p>
+    </div>
+    <div>
+        <input (keyup)="onKey($event)" >
+        <button (click)="FilterApp()">Filter Appartements</button>
+    </div>
+
