--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -10,10 +10,16 @@
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="homewy">Acceuil</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" routerLink="resid">Residence</a>
         </li>
         <li class="nav-item">
           <a class="nav-link " routerLink="appart">Appartement</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " routerLink="productis">Products</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
